# energy-budget-from-proxies

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
jobs/: compute_forecasts_for_verification.sh  compute_seasonal_anomalies_cesm.sh  compute_seasonal_anomalies_miroc.sh  compute_seasonal_anomalies_mpi.sh  compute_seasonal_anomalies_mri.sh  compute_training_data.sh  compute_verification_proxies.sh  postprocess_reconstruction.sh  postprocess_reconstruction_mc.sh  run_reconstruction.sh  run_reconstruction_mc.sh
lmrecon/: cesm_tools.py  clouds.py  colormaps.py  constants.py  da.py  datasets.py  eof.py  grid.py  indices.py  io.py  kf.py  lim.py  logger.py  mapper.py  plotting.py  plotting_config.py  psm.py  reconstruction.py  signal.py  stats.py  time.py  units.py  util.py
lmrecon/scripts/: assemble_pdb.py  calibrate_indices.py  calibrate_psms.py  compute_cloud_fractions.py  compute_combined_seasonal_anomalies.py  compute_forecasts_for_verification.py  compute_hybrid_siconc_climatology.py  compute_multimodel_mean.py  compute_pseudo_obs.py  compute_seasonal_anomalies.py  compute_seasonal_averages.py  compute_seasonal_averages_cesm.py  compute_seasonal_detrended_anomalies.py  compute_truncated_dataset.py  compute_verification_proxies.py  download_cmip6_dataset.py  fit_mapper.py  info.py  postprocess_reconstruction.py  postprocess_reconstruction_mc.py  run_reconstruction_allproxies.py  run_reconstruction_single.py  train_lim.py  update_intake_catalog.py
notebooks/: find_volcanic_periods.ipynb  inspect_eofs.ipynb  inspect_indices.ipynb  inspect_mapper.ipynb  inspect_training_data.ipynb  intake.ipynb  make_colormap.ipynb  test_eof.ipynb  test_io.ipynb  test_mapper.ipynb  test_preprocessing_order.ipynb  test_pseudoobs.ipynb
tests/: test_psm.py  test_stats.py  test_time.py  test_util.py
